[package]
name = "cache-line-size"
version = "0.9.0"
categories = ["hardware-support", "memory-management"]
edition = "2024"
keywords = ["memory", "performance", "line", "size", "cache"]
license = "BSD-3-Clause"
readme = "./README.md"

[target.'cfg(target_arch = "x86")'.dependencies]
raw-cpuid = "11"
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation"] }
