[package]
name = "yep-cache-line-size"
version = "0.9.3"
description = "A small library for retrieving cache line sizes. Forked from lovesegfault/cache-size."
categories = ["hardware-support", "memory-management"]
edition = "2024"
keywords = ["memory", "performance", "line", "size", "cache"]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/richkcho/cache-line-size"

[target.'cfg(target_arch = "x86")'.dependencies]
raw-cpuid = "11"
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
libc = "0.2"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation"] }
